<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:background="@drawable/shape_box_main"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.daipeng.phonemonitor.activity.MainActivity" >

    <TextView
        android:id="@+id/page_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_setting_label_title"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="30dip"
        android:layout_marginTop="20dip"
        android:background="@drawable/shape_box"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="10dip"
        android:paddingRight="10dip" >

        <LinearLayout
            android:layout_width="274dp"
            android:layout_height="wrap_content"
            tools:ignore="UselessLeaf" 
            android:layout_weight="1">

            <Button
                android:id="@+id/basicsetting"
                style="?android:attr/buttonStyleSmall"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:onClick="onBasicSetting"
                android:text="@string/activity_setting_label_basicsetting" />

            <Button
                android:id="@+id/mailsetting"
                style="?android:attr/buttonStyleSmall"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:onClick="onMailSetting"
                android:text="@string/activity_setting_label_mailsetting" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="6" >

            <LinearLayout
                android:id="@+id/mailsettingView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                 >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/mail_label"
                        android:layout_width="@dimen/activity_setting_mail_label_width"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/activity_setting_mail_toaddress" />

                    <EditText
                        android:id="@+id/mail_input"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="8"
                        android:ems="30"
                        android:inputType="textEmailAddress" />
                </LinearLayout>
                
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/mail_fromaddress_label"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:layout_width="@dimen/activity_setting_mail_label_width"
                        android:text="@string/activity_setting_mail_fromaddress" />

                    <EditText
                        android:id="@+id/mail_fromaddress"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="8"
                        android:ems="30"
                        android:inputType="textEmailAddress" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    
                    <TextView
                        android:id="@+id/mai_smtphost_label"
                        android:layout_width="@dimen/activity_setting_mail_label_width"
                        android:layout_height="wrap_content"
                        android:layout_weight="2.95"
                        android:text="@string/activity_setting_mail_smtphost" />

                    <EditText
                        android:id="@+id/mail_stmphost"
                        android:layout_width="@dimen/activity_setting_mail_value_width"
                        android:layout_height="wrap_content"
                        android:ems="20"
                        android:layout_weight="8"
                        android:inputType="text"/>
                    
                </LinearLayout>
                
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    
                    <TextView
                        android:id="@+id/mai_smtpport_label"
                        android:layout_width="@dimen/activity_setting_mail_label_width"
                        android:layout_height="wrap_content"
                        android:layout_weight="2.95"
                        android:text="@string/activity_setting_mail_smtpport" />

                    <EditText
                        android:id="@+id/mail_stmpport"
                        android:layout_width="@dimen/activity_setting_mail_value_width"
                        android:layout_height="wrap_content"
                        android:layout_weight="8"
                        android:ems="20"
                        android:inputType="number"/>
                    
                </LinearLayout>
                
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    
                    <TextView
                        android:id="@+id/mai_smtpauth_label"
                        android:layout_width="@dimen/activity_setting_mail_label_width"
                        android:layout_height="wrap_content"
                        android:layout_weight="2.95"
                        android:text="@string/activity_setting_mail_smtpauth" />
                    
                    <CheckBox
	                    android:id="@+id/mai_smtpauth"
	                    android:layout_width="@dimen/activity_setting_mail_value_width"
                        android:layout_height="wrap_content"
                        android:layout_weight="8"
                     />
                    
                </LinearLayout>
                
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    
                    <TextView
                        android:id="@+id/mail_starttls_label"
                        android:layout_width="@dimen/activity_setting_mail_label_width"
                        android:layout_height="wrap_content"
                        android:layout_weight="2.95"
                        android:text="@string/activity_setting_mail_startTls" />
                    
                    <CheckBox
                        android:id="@+id/mail_starttls"
                        android:layout_width="@dimen/activity_setting_mail_value_width"
                        android:layout_height="wrap_content"
                        android:layout_weight="8"
                     />
                    
                </LinearLayout>
                
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    
                    <TextView
                        android:id="@+id/mai_username_label"
                        android:layout_width="@dimen/activity_setting_mail_label_width"
                        android:layout_height="wrap_content"
                        android:layout_weight="2.95"
                        android:text="@string/activity_setting_mail_username" />

                    <EditText
                        android:id="@+id/mail_username"
                        android:layout_width="@dimen/activity_setting_mail_value_width"
                        android:layout_height="wrap_content"
                        android:layout_weight="8"
                        android:ems="20"
                        android:inputType="text"/>
                    
                </LinearLayout>
                
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    
                    <TextView
                        android:id="@+id/mai_userpwd_label"
                        android:layout_width="@dimen/activity_setting_mail_label_width"
                        android:layout_height="wrap_content"
                        android:layout_weight="2.95"
                        android:text="@string/activity_setting_mail_userpwd" />

                    <EditText
                        android:id="@+id/mail_userpwd"
                        android:layout_width="@dimen/activity_setting_mail_value_width"
                        android:layout_height="wrap_content"
                        android:layout_weight="8"
                        android:ems="20"
                        android:inputType="textPassword"/>
                    
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <Button
                        android:id="@+id/mailTest"
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/button_shape"
                        android:onClick="onMailTest"
                        android:text="@string/activity_setting_botton_mailtest" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/basicsettingView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" 
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/activity_setting_margin"
                    android:orientation="vertical"
                    tools:ignore="UselessLeaf" >
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/phone_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@string/activity_setting_label_phone" />

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="" />

                    <Switch
                        android:id="@+id/phone_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:textOff="@string/activity_setting_switch_off"
                        android:textOn="@string/activity_setting_switch_on" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/activity_setting_margin"
                    android:orientation="vertical"
                    tools:ignore="UselessLeaf" >
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/sms_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2.46"
                        android:text="@string/activity_setting_label_sms" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="" />

                    <Switch
                        android:id="@+id/sms_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:textOff="@string/activity_setting_switch_off"
                        android:textOn="@string/activity_setting_switch_on" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/activity_setting_margin"
                    android:orientation="vertical"
                    tools:ignore="UselessLeaf" >
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/battery_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@string/activity_setting_label_battery" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="" />

                    <Switch
                        android:id="@+id/battery_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:textOff="@string/activity_setting_switch_off"
                        android:textOn="@string/activity_setting_switch_on" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/activity_setting_margin_big"
                    android:orientation="vertical"
                    tools:ignore="UselessLeaf" >
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="10dip" >

            <Button
                android:id="@+id/back"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/button_shape"
                android:onClick="onBack"
                android:text="@string/activity_setting_botton_back" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/save"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/button_shape"
                android:onClick="onSave"
                android:text="@string/activity_setting_botton_save" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>